--- a/lang/nl_NL.po
+++ b/lang/nl_NL.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Enfold v4.7.5.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-09 14:32+0000\n"
-"PO-Revision-Date: 2020-07-09 14:40+0000\n"
+"PO-Revision-Date: 2020-07-30 11:32+0000\n"
 "Last-Translator: \n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
@@ -17,7 +17,7 @@ msgstr ""
 "_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: ../\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.3.3; wp-5.4.2\n"
+"X-Loco-Version: 2.4.0; wp-5.5-beta2\n"
 "X-Poedit-SearchPath-0: .\n"
 
 # @ avia_framework
@@ -15664,23 +15664,20 @@ msgstr "Modern, zonder lijn (gecentreerd)"
 
 # @ avia_framework
 #: config-templatebuilder/avia-shortcodes/heading/heading.php:190
-#, fuzzy
 msgid "Heading Style Modern (right)"
-msgstr "Modern, zonder lijn (links)"
+msgstr "Modern, zonder lijn (rechts)"
 
 #: config-templatebuilder/avia-shortcodes/heading/heading.php:191
-#, fuzzy
 msgid "Heading Style Classic (left, italic)"
-msgstr "Klassieke stijl (gecentreerd, cursief)"
+msgstr "Klassieke stijl (links, cursief)"
 
 #: config-templatebuilder/avia-shortcodes/heading/heading.php:192
 msgid "Heading Style Classic (centered, italic)"
 msgstr "Klassieke stijl (gecentreerd, cursief)"
 
 #: config-templatebuilder/avia-shortcodes/heading/heading.php:193
-#, fuzzy
 msgid "Heading Style Classic (right, italic)"
-msgstr "Klassieke stijl (gecentreerd, cursief)"
+msgstr "Klassieke stijl (rechts, cursief)"
 
 #: config-templatebuilder/avia-shortcodes/heading/heading.php:198
 msgid "Subheading"
