--- a/lang/de_DE_formal.po
+++ b/lang/de_DE_formal.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-17 16:40+0000\n"
-"PO-Revision-Date: 2021-03-03 15:02+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-04-06 15:51+0000\n"
+"Last-Translator: First Admin_Last\n"
 "Language-Team: German (Formal)\n"
 "Language: de_DE_formal\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "X-Poedit-Basepath: ../..\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.4.2; wp-5.5\n"
+"X-Loco-Version: 2.5.2; wp-5.7\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: config-templatebuilder/avia-template-builder/php/generic-helper.class.php:430
@@ -1164,8 +1164,8 @@ msgid ""
 "characters (latin characters, underscores, dashes and numbers)."
 msgstr ""
 "Fügen Sie hier eine benutzerdefinierte CSS-Klasse für die Überschrift hinzu. "
-"Stellen Sie sicher, dass Sie nur zulässige Zeichen (lateinische Zeichen, "
-"Unterstriche, Bindestriche und Zahlen) verwenden."
+"Stellen Sie sicher, dass Sie nur zulässige Zeichen verwenden (lateinische "
+"Zeichen, Unterstriche, Bindestriche und Zahlen)."
 
 #: config-templatebuilder/avia-template-builder/php/shortcode-template.class.php:1654
 msgid ""
@@ -1276,6 +1276,11 @@ msgid ""
 "characters, underscores, dashes and numbers, no special characters can be "
 "used)"
 msgstr ""
+"Fügen Sie hier eine benutzerdefinierte CSS-Klasse für das Element hinzu. "
+"Dieses Feld kann im benutzerdefinierten Element gesperrt werden. Stellen Sie "
+"sicher, dass Sie nur erlaubte Zeichen verwenden (Lateinische Zeichen, "
+"Unterstriche, Verbindungsstriche und Zahlen, es können keine speziellen "
+"Zeichen benutzt werden.)"
 
 #: config-templatebuilder/avia-shortcodes/columns.php:408
 msgid "Add an alt attribut for screen reader"
@@ -1379,12 +1384,12 @@ msgstr "Bilder hinzufügen"
 
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:1713
 msgid "Add New ALB Custom Element Template"
-msgstr ""
+msgstr "Benutzerdefiniertes Element hinzufügen"
 
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:1712
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:2350
 msgid "Add New Custom Element"
-msgstr ""
+msgstr "Neues benutzerdefiniertes Element anlegen"
 
 #: includes/admin/register-portfolio.php:15
 msgid "Add New Portfolio Entry"
@@ -6139,11 +6144,11 @@ msgstr "Erstellen Sie einen Klon für den Titelmenüeintrag"
 
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:2412
 msgid "Create A New Custom Element Template"
-msgstr ""
+msgstr "Ein neues Element als Vorlage anlegen"
 
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:3171
 msgid "Create a new element"
-msgstr ""
+msgstr "Element neu anlegen"
 
 #: config-templatebuilder/avia-shortcodes/gallery/gallery.php:194
 #: config-templatebuilder/avia-shortcodes/gallery_horizontal/gallery_horizontal.php:186
@@ -6171,11 +6176,11 @@ msgstr "Erstelle und editiere eine Audiowiedergabeleiste"
 
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:2413
 msgid "Create Element"
-msgstr ""
+msgstr "Element anlegen"
 
 #: config-templatebuilder/avia-template-builder/php/element-templates.class.php:4103
 msgid "Create New Element Template"
-msgstr ""
+msgstr "Element als Vorlage erzeugen"
 
 #: includes/admin/register-admin-options.php:4190
 msgid "Create new Sidebar Widget Areas"
@@ -14468,7 +14473,7 @@ msgstr "Layout Architekt auch für Administratoren sperren?"
 
 #: config-templatebuilder/avia-template-builder/php/shortcode-template.class.php:1620
 msgid "Lockable Custom CSS Class"
-msgstr ""
+msgstr "Sperrbare benutzerdefinierte CSS-Klasse"
 
 #: config-woocommerce/config-356.php:492 config-woocommerce/config.php:605
 msgid "Log In"
