--- a/lang/de_DE_formal.po
+++ b/lang/de_DE_formal.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-17 16:40+0000\n"
-"PO-Revision-Date: 2021-04-07 09:24+0000\n"
+"PO-Revision-Date: 2021-04-30 16:01+0000\n"
 "Last-Translator: First Admin_Last\n"
 "Language-Team: German (Formal)\n"
 "Language: de_DE_formal\n"
@@ -18,7 +18,7 @@ msgstr ""
 "X-Poedit-Basepath: ../..\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.5.2; wp-5.7\n"
+"X-Loco-Version: 2.5.2; wp-5.7.1\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: config-templatebuilder/avia-template-builder/php/generic-helper.class.php:465
@@ -23179,11 +23179,11 @@ msgstr ""
 
 #: includes/admin/register-admin-options.php:227
 msgid "Theme Extensions"
-msgstr ""
+msgstr "Theme Erweiterungen"
 
 #: includes/admin/option_tabs/avia_ext_avia_ext.php:19
 msgid "Theme Extensions Options"
-msgstr ""
+msgstr "Optionen für Theme Erweiterungen "
 
 #: config-layerslider/config.php:615
 msgid "Theme layerslider plugin files could not be deleted."
