Update de_DE_formal, it_IT and nl_NL

--- a/lang/de_DE_formal.po
+++ b/lang/de_DE_formal.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-12-10 15:59+0200\n"
-"PO-Revision-Date: 2021-12-10 16:05+0200\n"
+"PO-Revision-Date: 2022-01-26 13:04+0200\n"
 "Last-Translator: \n"
 "Language-Team: German (Formal)\n"
 "MIME-Version: 1.0\n"
@@ -31909,8 +31909,7 @@ msgid ""
 msgstr ""
 "Diese Webseite ist durch Google reCAPTCHA geschützt. Es gelten die <a href="
 "\"https://policies.google.com/privacy\">Datenschutzrichtlinie</a> und die <a "
-"href = \"https://policies.google.com/terms.com geschützt "
-"\">Nutzungsbedingungen</a>."
+"href=\"https://policies.google.com/terms\">Nutzungsbedingungen</a>."
 
 #: enfold/framework/php/class-grecaptcha.php:237
 msgid ""
