--- a/lang/nl_NL.po
+++ b/lang/nl_NL.po
@@ -3,9 +3,9 @@ msgstr ""
 "Project-Id-Version: Enfold v4.7.5.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-12-15 15:00+0200\n"
-"PO-Revision-Date: 2022-10-08 11:36+0000\n"
+"PO-Revision-Date: 2022-10-09 16:35+0000\n"
 "Last-Translator: Roger Hoen\n"
-"Language-Team: Dutch\n"
+"Language-Team: Nederlands\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,7 +17,7 @@ msgstr ""
 "_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: ../\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.6.2; wp-6.0.1\n"
+"X-Loco-Version: 2.6.2; wp-6.0.2\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: config-templatebuilder/avia-template-builder/php/class-generic-helper.php:601
@@ -10576,6 +10576,7 @@ msgstr ""
 #: config-templatebuilder/avia-template-builder/php/class-element-templates.php:2385
 msgid "Editing of custom elements is not allowed on fullscreen mode."
 msgstr ""
+"Het bewerken van aangepaste elementen is niet toegestaan in volledig scherm."
 
 #: config-wpml/config.php:278
 msgid "Editing:"
@@ -24360,6 +24361,9 @@ msgid ""
 "CSS files. HTTP2 recommends to use only minified files for best loading "
 "performance."
 msgstr ""
+"Selecteer welk niveau van samenvoeging en compressie u wilt toepassen op uw "
+"CSS-bestanden. HTTP2 raadt aan om alleen geminimaliseerde bestanden te "
+"gebruiken voor de beste laadprestaties."
 
 #: includes/admin/option_tabs/avia_performance.php:73
 msgid ""
@@ -24367,6 +24371,9 @@ msgid ""
 "Javascript files. HTTP2 recommends to use only minified files for best "
 "loading performance."
 msgstr ""
+"Selecteer welk niveau van samenvoeging en compressie u wilt toepassen op uw "
+"Javascript-bestanden. HTTP2 raadt aan om alleen geminimaliseerde bestanden "
+"te gebruiken voor de beste laadprestaties."
 
 #: includes/admin/option_tabs/avia_avia.php:26
 #| msgid ""
@@ -26549,7 +26556,7 @@ msgstr "Start ondoorzichtigheid"
 
 #: includes/admin/option_tabs/avia_performance.php:37
 msgid "Starting with 5.2:"
-msgstr ""
+msgstr "Vanaf 5.2:"
 
 #: config-templatebuilder/avia-template-builder/php/base-classes/class-modal-elements.php:2268
 msgid "State"
@@ -27089,7 +27096,7 @@ msgstr "Teamlid naam lettergroottes"
 
 #: config-templatebuilder/avia-shortcodes/social_share/social_share.php:285
 msgid "Telegram link"
-msgstr ""
+msgstr "Telegram link"
 
 #: config-templatebuilder/avia-template-builder/php/class-save-buildertemplate.php:140
 msgid ""
@@ -28665,6 +28672,12 @@ msgid ""
 "use merging please delete the .min file and we will minify the original file "
 "for you on the fly."
 msgstr ""
+"Om het HTTP2 protocol te ondersteunen voegen we geminimaliseerde versies van "
+"alle thema css en js bestanden toe die ook gebruikt worden wanneer je kiest "
+"voor samenvoegen. Als u wijzigingen aanbrengt in een kernbestand van het "
+"thema en u kunt geen correct geminimaliseerd bestand leveren en samenvoegen "
+"gebruiken, verwijder dan het .min-bestand en wij zullen het oorspronkelijke "
+"bestand voor u minimaliseren."
 
 #: config-wpml/class-avia-wpml.php:484
 #, php-format
@@ -29934,12 +29947,12 @@ msgstr "Gebruik handmatig toegevoegde URL in instellingen pagina"
 #. __( 'Compress all theme and plugin CSS files (level 3)', 'avia_framework' )		=> 'all',
 #: includes/admin/option_tabs/avia_performance.php:66
 msgid "Use minified theme CSS files without merging"
-msgstr ""
+msgstr "Gebruik geminimaliseerde thema CSS-bestanden zonder samenvoegen"
 
 #. __( 'Compress all theme and plugin files (level 3)', 'avia_framework' )			=> 'all',
 #: includes/admin/option_tabs/avia_performance.php:84
 msgid "Use minified theme javascript files without merging"
-msgstr ""
+msgstr "Gebruik geminimaliseerde thema Javascript-bestanden zonder samenvoegen"
 
 #: config-templatebuilder/avia-shortcodes/audio-player/audio-player.php:305
 msgid "Use order of playlist as selected"
@@ -30181,7 +30194,7 @@ msgid ""
 "&raquo; Performance"
 msgstr ""
 "Het gebruik van zelfgehoste video's is momenteel uitgeschakeld. U kunt het "
-"inschakelen in Enfold &raquo; Performance"
+"inschakelen in Enfold &raquo; Prestatie"
 
 #: framework/php/function-set-avia-ajax.php:1009
 #: framework/php/function-set-avia-ajax.php:1070
